--- a/package.json
+++ b/package.json
@@ -15,7 +15,14 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
-    "react-native-web": "0.17.1"
+    "react-native-material-menu": "^2.0.0",
+    "react-native-paper": "^4.12.1",
+    "react-native-simple-radio-button": "^2.7.4",
+    "react-native-web": "0.17.1",
+    "react-navigation": "^4.4.4",
+    "react-redux": "^8.0.1",
+    "redux": "^4.2.0",
+    "redux-form": "^8.3.8"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
